--- a/AssignmentNew.csproj
+++ b/AssignmentNew.csproj
@@ -167,6 +167,7 @@
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Views\Home.aspx" />
     <Content Include="Views\Login.aspx" />
+    <Content Include="Views\Logout.aspx" />
     <Content Include="Views\Register.aspx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
@@ -236,6 +237,13 @@
     </Compile>
     <Compile Include="Views\Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Logout.aspx.cs">
+      <DependentUpon>Logout.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Logout.aspx.designer.cs">
+      <DependentUpon>Logout.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Register.aspx.cs">
       <DependentUpon>Register.aspx</DependentUpon>
