--- a/AssignmentNew.csproj
+++ b/AssignmentNew.csproj
@@ -136,7 +136,22 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
-    <Content Include="Images\iis.png" />
+    <Content Include="Images\Artechol.png" />
+    <Content Include="Images\cough.png" />
+    <Content Include="Images\cream.png" />
+    <Content Include="Images\feroglobinvit.png" />
+    <Content Include="Images\ferogloin.png" />
+    <Content Include="Images\lecitone.png" />
+    <Content Include="Images\lecitonemag.png" />
+    <Content Include="Images\lecitonese.png" />
+    <Content Include="Images\memo.png" />
+    <Content Include="Images\memoamp.png" />
+    <Content Include="Images\Propliquid.png" />
+    <Content Include="Images\well50.png" />
+    <Content Include="Images\well70.png" />
+    <Content Include="Images\wellher.png" />
+    <Content Include="Images\wellhim.png" />
+    <Content Include="Images\wellori.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
